--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -4,8 +4,8 @@ ENV MYSQL_ROOT_PASSWORD=contrasena
 
 EXPOSE 3306
 
-COPY ./db/permisos.sql /docker-entrypoint-initdb.d/
-COPY ./db/principal.sql /docker-entrypoint-initdb.d/
+COPY ./sql/permisos.sql /docker-entrypoint-initdb.d/
+COPY ./sql/principal.sql /docker-entrypoint-initdb.d/
 
 RUN mkdir -p /var/lib/mysql-files/images
 COPY ./images/ /var/lib/mysql-files/images/
