--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,52 @@
 version: '3.7'
+
 services:
   db:
-    image: mariadb:latest
+    image: mariadbproyecto
+    build: ./mariadb
     environment:
       MYSQL_ROOT_PASSWORD: contrasena
     volumes:
       - db-data:/var/lib/mysql
     ports:
       - "3306:3306"
-
-  frontend:
-    build: ./frontend
-    ports:
-      - "80:80"
-    depends_on:
-      - db
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "mariadb --user=root --password=$$MYSQL_ROOT_PASSWORD -e 'SELECT 1'"]
+      interval: 30s
+      timeout: 10s
+      start_period: 1m
+      retries: 3
+    restart: unless-stopped
 
   backend:
+    image: backendproyecto
     build: ./backend
     ports:
       - "3000:3000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    networks:
+      - app-network
+    restart: unless-stopped
+
+  frontend:
+    image: frontendproyecto
+    build: ./frontend
+    ports:
+      - "8080:80"
+    depends_on:
+      - backend
+    networks:
+      - app-network
+    restart: unless-stopped
 
 volumes:
   db-data:
+
+networks:
+  app-network:
+    driver: bridge
 
