--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -1,9 +1,11 @@
+
 FROM mariadb:latest
 
 ENV MYSQL_ROOT_PASSWORD=contrasena
 
 EXPOSE 3306
 
+COPY ./sql/permisos.sql /docker-entrypoint-initdb.d/
 COPY ./sql/permisos_personalizado.sql /docker-entrypoint-initdb.d/
 COPY ./sql/principal.sql /docker-entrypoint-initdb.d/
 
