--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "bcrypt": "^5.0.1"
   }
 }
 
