--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5"
   }
 }
 
